[#13721] Refactor session creator checks to use isCreator (#14080)